Fix for minor issue in dark mode styling

--- a/playbook/app/pb_kits/playbook/pb_advanced_table/_advanced_table.scss
+++ b/playbook/app/pb_kits/playbook/pb_advanced_table/_advanced_table.scss
@@ -354,10 +354,10 @@
       }
 
       &.bg-silver {
-        background: $bg_dark;
+        background: $bg_dark !important;
 
         td:first-child {
-          background: $bg_dark;
+          background: $bg_dark !important;
         }
       }
     }
